# TP03-PAA

./: CMakeLists.txt  comparacao.c  comparacao.h  contarCaracteres.c  leituraDeArquivo.c  leituraDeArquivo.h  main.c  produtoCartesiano.c  produtoCartesiano.h  saida  similaridade.c  similaridade.h  simulacao.c  simulacao.h  teste.txt  teste2.txt
